--- a/index.html
+++ b/index.html
@@ -169,25 +169,25 @@
 
         <!-- Lightbox modals -->
         <div id="img1" class="lightbox">
-            <a href="#"><img src="images/images/MALT_1.jpg" alt="Malt 1"></a>
+            <a href="#"><img src="images/MALT_1.jpg" alt="Malt 1"></a>
         </div>
         <div id="img2" class="lightbox">
-            <a href="#"><img src="images/images/MALT_2.jpg" alt="Malt 2"></a>
+            <a href="#"><img src="images/MALT_2.jpg" alt="Malt 2"></a>
         </div>
         <div id="img3" class="lightbox">
-            <a href="#"><img src="images/images/MALT_3.jpg" alt="Malt 3"></a>
+            <a href="#"><img src="images/MALT_3.jpg" alt="Malt 3"></a>
         </div>
         <div id="img4" class="lightbox">
-            <a href="#"><img src="images/images/MALT_4.jpg" alt="Malt 4"></a>
+            <a href="#"><img src="images/MALT_4.jpg" alt="Malt 4"></a>
         </div>
         <div id="img5" class="lightbox">
-            <a href="#"><img src="images/images/MALT_5.jpg" alt="Malt 5"></a>
+            <a href="#"><img src="images/MALT_5.jpg" alt="Malt 5"></a>
         </div>
         <div id="img6" class="lightbox">
-            <a href="#"><img src="images/images/MALT_6.jpg" alt="Malt 6"></a>
+            <a href="#"><img src="images/MALT_6.jpg" alt="Malt 6"></a>
         </div>
         <div id="img7" class="lightbox">
-            <a href="#"><img src="images/images/MALT_7.jpg" alt="Malt 7"></a>
+            <a href="#"><img src="images/MALT_7.jpg" alt="Malt 7"></a>
         </div>
 
         <div class="info-map-container">
